Runnable P2P demo (#1)
* adjust code

* simplify code

* adjust demo code

* add log4j init in demo

* fix send 0

* post send + more info in disconnect

* support cb for connect

* update run.sh

---------

Co-authored-by: zizhao <zizhao@nvidia.com>